# ileap-skill

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md  ileap-dashboard.html  vercel.json
.agents/evals/ileap/: eval.yaml
.agents/evals/ileap-cli/: eval.yaml
.agents/evals/ileap-cli/tasks/: positive-trigger-2.yaml
.agents/skills/ileap/: SKILL.md
.agents/skills/ileap-cli/: SCHEMAS.md  SKILL.md
.claude/: settings.json
.claude/skills/: ileap
.claude/skills/ileap/: SKILL.md
.claude/skills/ileap-cli/: SKILL.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: output.rs
docs/: DOC-DRIFT.md
docs/adr/: 0001-minimize-tokio-runtime-footprint.md  0002-remove-interactive-repl.md  0003-deduplicate-resource-dispatch.md  0004-client-trait-abstraction.md  0005-typed-errors-with-thiserror.md  0006-token-cache-hardening.md  0007-pagination-loop-correctness.md  0008-pact-filter-semantics.md  0009-straighten-dispatch-and-interactive-flow.md  0010-ileap-skill-microsite.md  0010-token-cache-username-scoping.md  PROCESS.md  README.md
ileap/: SKILL.md
ileap/references/: SCHEMAS.md
scripts/: build-skill-binaries.sh  package-skill.sh
site/: config.toml
site/content/: _index.md
site/static/: styles.css
site/static/demos/: dashboard.html  scenario-planner.html  toc-hoc-decarbonization.md  toc-hoc-decarbonization.xlsx
site/templates/: index.html
src/: auth.rs  cli.rs  client.rs  commands.rs  error.rs  main.rs  output.rs  pager.rs  repl.rs  tty.rs
tests/: integration.rs
(+2 files in other folders)
